--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ========================================================================================
-    nf-core/mkfastq Nextflow config file
+    RHReynolds/mkfastq Nextflow config file
 ========================================================================================
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -77,14 +77,6 @@ if (!params.igenomes_ignore) {
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
-    conda {
-        params.enable_conda    = true
-        docker.enabled         = false
-        singularity.enabled    = false
-        podman.enabled         = false
-        shifter.enabled        = false
-        charliecloud.enabled   = false
-    }
     docker {
         docker.enabled         = true
         docker.userEmulation   = true
@@ -123,7 +115,6 @@ profiles {
         shifter.enabled        = false
     }
     test      { includeConfig 'conf/test.config'      }
-    test_full { includeConfig 'conf/test_full.config' }
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
@@ -155,9 +146,9 @@ dag {
 }
 
 manifest {
-    name            = 'nf-core/mkfastq'
+    name            = 'RHReynolds/mkfastq'
     author          = 'Regina H Reynolds'
-    homePage        = 'https://github.com/nf-core/mkfastq'
+    homePage        = 'https://github.com/RHReynolds/mkfastq'
     description     = 'A pipeline to convert BCLs to FASTQs for 10x genomics data'
     mainScript      = 'main.nf'
     nextflowVersion = '!>=21.04.0'
