fix: remove fastqc/multiqc params

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,10 +22,7 @@
 
 params {
     modules {
-        'fastqc' {
-            args = "--quiet"
-        }
-        'multiqc' {
+        'mkfastq' {
             args = ""
         }
     }
