--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,7 @@
-blank_issues_enabled: false
 contact_links:
   - name: Join nf-core
     url: https://nf-co.re/join
     about: Please join the nf-core community here
-  - name: "Slack #mkfastq channel"
-    url: https://nfcore.slack.com/channels/mkfastq
-    about: Discussion about the nf-core/mkfastq pipeline
+  - name: "Slack #rhreynolds-mkfastq channel"
+    url: https://nfcore.slack.com/channels/rhreynolds-mkfastq
+    about: Discussion about the nf-core/rhreynolds-mkfastq pipeline
