--- a/.github/workflows/awstest.yml
+++ b/.github/workflows/awstest.yml
@@ -7,22 +7,19 @@ on:
 jobs:
   run-tower:
     name: Run AWS tests
-    if: github.repository == 'nf-core/mkfastq'
+    if: github.repository == 'nf-core/rhreynolds-mkfastq'
     runs-on: ubuntu-latest
     steps:
+      # Launch workflow using Tower CLI tool action
       - name: Launch workflow via tower
-        uses: nf-core/tower-action@master
-        
+        uses: nf-core/tower-action@v3
         with:
           workspace_id: ${{ secrets.TOWER_WORKSPACE_ID }}
-          bearer_token: ${{ secrets.TOWER_BEARER_TOKEN }}
+          access_token: ${{ secrets.TOWER_ACCESS_TOKEN }}
           compute_env: ${{ secrets.TOWER_COMPUTE_ENV }}
-          pipeline: ${{ github.repository }}
-          revision: ${{ github.sha }}
-          workdir: s3://${{ secrets.AWS_S3_BUCKET }}/work/mkfastq/work-${{ github.sha }}
+          workdir: s3://${{ secrets.AWS_S3_BUCKET }}/work/rhreynolds-mkfastq/work-${{ github.sha }}
           parameters: |
             {
-              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/mkfastq/results-${{ github.sha }}"
+              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/rhreynolds-mkfastq/results-test-${{ github.sha }}"
             }
-          profiles: '[ "test", "aws_tower" ]'
-
+          profiles: test,aws_tower
