fix: update configs
Update configs to reflect changes to pipeline. Remove igenomes, as not
required for running this pipeline.

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,8 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    input_csv                  = null
+    input_bcl                  = null
 
     // Boilerplate options
     outdir                     = null
@@ -24,7 +25,8 @@ params {
     help                       = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'genomes'
+    schema_ignore_params       = null
+    enable_conda               = false
 
     // Config options
     custom_config_version      = 'master'
@@ -54,6 +56,14 @@ try {
 
 profiles {
     debug { process.beforeScript = 'echo $HOSTNAME' }
+    conda {
+        params.enable_conda    = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
     docker {
         docker.enabled         = true
         docker.userEmulation   = true
@@ -92,13 +102,6 @@ profiles {
         shifter.enabled        = false
     }
     test      { includeConfig 'conf/test.config'      }
-}
-
-// Load igenomes.config if required
-if (!params.igenomes_ignore) {
-    includeConfig 'conf/igenomes.config'
-} else {
-    params.genomes = [:]
 }
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
