test: update module and test config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -27,6 +27,10 @@ process {
     }
 
     withName: CELLRANGER_MKFASTQ {
+        publishDir = [
+            path: { "${params.outdir}/cellranger/mkfastq" },
+            mode: params.publish_dir_mode
+        ]
         ext.args = ''
     }
 
