--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run RHReynolds/mkfastq -profile test,<docker/singularity>
+        nextflow run RHReynolds/mkfastq -profile test,<docker/singularity> --input_bcl </PATH_TO_BCL> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
@@ -20,10 +20,20 @@ params {
     max_time   = '6.h'
 
     // Input data
-    // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-    // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = 'https://raw.githubusercontent.com/nf-core/test-datasets/viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    input_csv  = 'https://cf.10xgenomics.com/supp/cell-exp/cellranger-tiny-bcl-simple-1.2.0.csv'
+    // TODO: file will need untar
+    // input_bcl  = 'https://cf.10xgenomics.com/supp/cell-exp/cellranger-tiny-bcl-1.2.0.tar.gz'
 
-    // Genome references
-    genome = 'R64-1-1'
+    // Ignore inputs as otherwise the parameter validation will throw an error
+    schema_ignore_params = 'input_csv'
+
+}
+
+process {
+    withName: 'CELLRANGER_MKFASTQ' {
+        ext.args   = [
+            '--rc-i2-override=true',
+            '--delete-undetermined'
+            ].join(' ').trim()
+    }
 }
