--- a/nextflow.config
+++ b/nextflow.config
@@ -24,7 +24,7 @@ params {
     help                       = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = null
+    schema_ignore_params       = ''
     enable_conda               = false
 
     // Config options
